--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>MindX C4EJS151</title>
 </head>
 <body>
-    <a href="/movie-app/">Movive App</a>
+    <a href="/MindX-C4EJS-151/movie-app/">Movive App</a>
 </body>
 </html>
