Lesson 15: Deploy movioe app

--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Should I watch it?</h1>
         <form id="form">
-            <input type="text" placeholder="Search" class="search">
+            <input type="text" placeholder="Search" id="search" class="search">
         </form>
     </header>
     <main id="main">
@@ -54,5 +54,7 @@
             This pen uses the TMDb API but is not endorsed or certified by TMDb.
         </p>
     </footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
